--- a/break/index.html
+++ b/break/index.html
@@ -5,19 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Breakout Game</title>
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      overflow: hidden;
+      touch-action: manipulation;
+    }
+
     canvas {
-      background: #111;
       display: block;
-      margin: 0 auto;
+      margin: auto;
+      background: #111;
       border: 2px solid #fff;
     }
   </style>
 </head>
 <body>
-  <canvas id="breakout" width="480" height="320"></canvas>
+  <canvas id="breakout"></canvas>
+
   <script>
     const canvas = document.getElementById("breakout");
     const ctx = canvas.getContext("2d");
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
 
     const paddleHeight = 10;
     const paddleWidth = 75;
@@ -48,58 +64,52 @@
       }
     }
 
-    document.addEventListener("keydown", keyDownHandler);
-    document.addEventListener("keyup", keyUpHandler);
+    document.addEventListener("keydown", e => {
+      if (e.key === "ArrowRight") rightPressed = true;
+      else if (e.key === "ArrowLeft") leftPressed = true;
+    });
 
-    function keyDownHandler(e) {
-      if (e.key === "Right" || e.key === "ArrowRight") rightPressed = true;
-      else if (e.key === "Left" || e.key === "ArrowLeft") leftPressed = true;
+    document.addEventListener("keyup", e => {
+      if (e.key === "ArrowRight") rightPressed = false;
+      else if (e.key === "ArrowLeft") leftPressed = false;
+    });
+
+    canvas.addEventListener("touchstart", e => {
+      const touchX = e.touches[0].clientX;
+      if (touchX < canvas.width / 2) {
+        leftPressed = true;
+        rightPressed = false;
+      } else {
+        rightPressed = true;
+        leftPressed = false;
+      }
+      e.preventDefault();
+    });
+
+    canvas.addEventListener("touchend", () => {
+      leftPressed = false;
+      rightPressed = false;
+    });
+
+    function collisionDetection() {
+      for (let c = 0; c < brickColumnCount; c++) {
+        for (let r = 0; r < brickRowCount; r++) {
+          const b = bricks[c][r];
+          if (b.status === 1) {
+            if (
+              x > b.x &&
+              x < b.x + brickWidth &&
+              y > b.y &&
+              y < b.y + brickHeight
+            ) {
+              dy = -dy;
+              b.status = 0;
+            }
+          }
+        }
+      }
     }
 
-    function keyUpHandler(e) {
-      if (e.key === "Right" || e.key === "ArrowRight") rightPressed = false;
-		  else if (e.key === "Left" || e.key === "ArrowLeft") leftPressed = false;
-		}
-
-	function collisionDetection() {
-	  for (let c = 0; c < brickColumnCount; c++) {
-		for (let r = 0; r < brickRowCount; r++) {
-		  const b = bricks[c][r];
-		  if (b.status === 1) {
-			if (
-			  x > b.x &&
-			  x < b.x + brickWidth &&
-			  y > b.y &&
-			  y < b.y + brickHeight
-			) {
-			  dy = -dy;
-			  b.status = 0;
-			}
-		  }
-		}
-	  }
-	}
-	
-	function resetGame() {
-	  // Reset ball
-	  x = canvas.width / 2;
-	  y = canvas.height - 30;
-	  dx = 2;
-	  dy = -2;
-
-	  // Reset paddle
-	  paddleX = (canvas.width - paddleWidth) / 2;
-
-	  // Reset bricks
-	  for (let c = 0; c < brickColumnCount; c++) {
-		for (let r = 0; r < brickRowCount; r++) {
-		  bricks[c][r].status = 1;
-		}
-	  }
-
-	  // Restart the game loop
-	  draw();
-	}
     function drawBall() {
       ctx.beginPath();
       ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -134,6 +144,20 @@
       }
     }
 
+    function resetGame() {
+      x = canvas.width / 2;
+      y = canvas.height - 30;
+      dx = 2;
+      dy = -2;
+      paddleX = (canvas.width - paddleWidth) / 2;
+      for (let c = 0; c < brickColumnCount; c++) {
+        for (let r = 0; r < brickRowCount; r++) {
+          bricks[c][r].status = 1;
+        }
+      }
+      draw();
+    }
+
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawBricks();
@@ -147,17 +171,17 @@
         if (x > paddleX && x < paddleX + paddleWidth) {
           dy = -dy;
         } else {
-		  setTimeout(() => {
-			if (confirm("Game Over! Play again?")) {
-			  resetGame();
-			}
-		  }, 10);
-		  return;
-		}
+          setTimeout(() => {
+            if (confirm("Game Over! Play again?")) {
+              resetGame();
+            }
+          }, 10);
+          return;
+        }
       }
 
-      if (rightPressed && paddleX < canvas.width - paddleWidth) paddleX += 5;
-      else if (leftPressed && paddleX > 0) paddleX -= 5;
+      if (rightPressed && paddleX < canvas.width - paddleWidth) paddleX += 7;
+      else if (leftPressed && paddleX > 0) paddleX -= 7;
 
       x += dx;
       y += dy;
